--- a/css/css first/accueil.css
+++ b/css/css first/accueil.css
@@ -438,7 +438,7 @@ article a {
   }
 }
 
-.card {
+.card-restaurants {
   display: flex;
   flex-direction: column;
   border-radius: 15px;
@@ -447,21 +447,21 @@ article a {
   margin-bottom: 8%;
 }
 @media only screen and (min-width: 768px) {
-  .card {
+  .card-restaurants {
     width: 45%;
     margin-right: auto;
     margin-left: auto;
   }
 }
-.card:hover {
+.card-restaurants:hover {
   box-shadow: 4px 6px 6px #9f8fac;
   opacity: 0.9;
 }
-.card a {
+.card-restaurants a {
   text-decoration: none;
   color: black;
 }
-.card img {
+.card-restaurants img {
   width: 100%;
   height: 200px;
   -o-object-fit: cover;
@@ -471,7 +471,7 @@ article a {
   border-radius: 15px 15px 0 0;
 }
 @media only screen and (min-width: 768px) {
-  .card img {
+  .card-restaurants img {
     height: 280px;
   }
 }
@@ -489,7 +489,7 @@ article a {
   padding: 2%;
 }
 
-.heading-card {
+.info-card {
   display: flex;
   flex-direction: column;
   justify-content: space-between;
@@ -497,46 +497,46 @@ article a {
   margin-right: 6%;
   position: relative;
 }
-.heading-card h3 {
+.info-card h3 {
   margin: 3% 0 1% 0;
   font-size: 23px;
 }
 @media only screen and (min-width: 768px) {
-  .heading-card h3 {
+  .info-card h3 {
     margin: 1% 0 1% 0;
   }
 }
-.heading-card .info {
+.info-card .location {
   margin: 0 0 4% 0;
 }
-.heading-card .far {
+.info-card .far {
   margin-top: 22px;
   position: absolute;
   right: 1px;
   top: 20px;
   font-size: xx-large;
 }
-.heading-card .far:hover {
+.info-card .far:hover {
   display: none;
   z-index: 0;
   cursor: pointer;
   color: transparent;
 }
-.heading-card .fas {
+.info-card .fas {
   position: absolute;
   margin-top: 22px;
   right: 1px;
   top: 20px;
   font-size: xx-large;
 }
-.heading-card .fas::before {
+.info-card .fas::before {
   content: "\f004";
   font-weight: bold;
   color: transparent;
   transform-origin: bottom;
   transition: all 0.8s linear 0s;
 }
-.heading-card .fas:hover::before {
+.info-card .fas:hover::before {
   display: block;
   color: #9356dc;
 }
