--- a/css/composants/_loader.scss
+++ b/css/composants/_loader.scss
@@ -1,13 +1,10 @@
 // loader
 .loader {
-    display: none;
-    @media only screen and (min-width: 768px) {
         display: flex;
         position: fixed;
         top: 50%;
         left: 50%;
         transform: translate(-50%, -50%);
-        border-radius: 2.5em;
         align-items: baseline;
         width: 100%;
         height: 100%;
@@ -54,14 +51,19 @@
         }
 
         p {
-            font-family: "Shrikhand", "Roboto", "Sans-serif";
-            font-size: 90px;
-            opacity: 0.7;
-        }
+            display: none;
+            @media only screen and (min-width: 768px) {
+                display: block;
+                font-family: "Shrikhand", "Roboto", "Sans-serif";
+                font-size: 90px;
+                opacity: 0.7;
+            }
+            
+         }
 
         .ball {
             //background-color: rgb(0,0,0,0.2);
-            width: 10%;
+            //width: 10%;
             height: 1.5em;
             border-radius: 1em;
             text-align: center;
@@ -259,7 +261,7 @@
                 transform: scale(1);
             }
         }
-    }
+  //  }
 }
 
 //
