--- a/css/main.css
+++ b/css/main.css
@@ -1,217 +1,216 @@
 .loader {
+  display: flex;
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  align-items: baseline;
+  width: 100%;
+  height: 100%;
+  justify-content: center;
+  align-items: center;
+  z-index: -1;
+  background-color: white;
+  opacity: 50%;
+  margin: 0;
+  padding: 0;
+  animation: loader 3s forwards;
+  -webkit-animation: loader 3s forwards;
+}
+@keyframes loader {
+  0% {
+    opacity: 1;
+    z-index: 9999;
+  }
+  95% {
+    opacity: 1;
+  }
+  100% {
+    opacity: 0;
+    z-index: -1;
+  }
+}
+@-webkit-keyframes loader {
+  0% {
+    opacity: 1;
+    z-index: 9999;
+  }
+  95% {
+    opacity: 1;
+  }
+  100% {
+    opacity: 0;
+    z-index: -1;
+  }
+}
+.loader p {
   display: none;
 }
 @media only screen and (min-width: 768px) {
-  .loader {
-    display: flex;
-    position: fixed;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    border-radius: 2.5em;
-    align-items: baseline;
-    width: 100%;
-    height: 100%;
-    justify-content: center;
-    align-items: center;
-    z-index: -1;
-    background-color: white;
-    opacity: 50%;
-    margin: 0;
-    padding: 0;
-    animation: loader 3s forwards;
-    -webkit-animation: loader 3s forwards;
-  }
-  @keyframes loader {
-    0% {
-      opacity: 1;
-      z-index: 9999;
-    }
-    95% {
-      opacity: 1;
-    }
-    100% {
-      opacity: 0;
-      z-index: -1;
-    }
-  }
-  @-webkit-keyframes loader {
-    0% {
-      opacity: 1;
-      z-index: 9999;
-    }
-    95% {
-      opacity: 1;
-    }
-    100% {
-      opacity: 0;
-      z-index: -1;
-    }
-  }
   .loader p {
+    display: block;
     font-family: "Shrikhand", "Roboto", "Sans-serif";
     font-size: 90px;
     opacity: 0.7;
   }
-  .loader .ball {
-    width: 10%;
-    height: 1.5em;
-    border-radius: 1em;
-    text-align: center;
-    font-size: 1em;
-    padding: 0.2em;
-    width: 1.5em;
-    border-style: none;
-    margin: 1em;
-    animation: ball 0.5s infinite;
-    -webkit-animation: ball 0.5s infinite;
+}
+.loader .ball {
+  height: 1.5em;
+  border-radius: 1em;
+  text-align: center;
+  font-size: 1em;
+  padding: 0.2em;
+  width: 1.5em;
+  border-style: none;
+  margin: 1em;
+  animation: ball 0.5s infinite;
+  -webkit-animation: ball 0.5s infinite;
+}
+.loader #ball-1 {
+  background: #e4d5f6;
+  animation: ball1 1.25s infinite;
+  -webkit-animation: ball1 1.25s infinite;
+}
+.loader #ball-2 {
+  background: white;
+  animation: ball2 1.25s infinite;
+  -webkit-animation: ball2 1.25s infinite;
+}
+.loader #ball-3 {
+  background: white;
+  animation: ball3 1.25s infinite;
+  -webkit-animation: ball3 1.25s infinite;
+}
+@keyframes ball1 {
+  0% {
+    transform: scale(1);
   }
-  .loader #ball-1 {
-    background: #e4d5f6;
-    animation: ball1 1.25s infinite;
-    -webkit-animation: ball1 1.25s infinite;
+  20% {
+    transform: scale(1.5);
+    background: #9356dc;
+    opacity: 0.8;
   }
-  .loader #ball-2 {
-    background: white;
-    animation: ball2 1.25s infinite;
-    -webkit-animation: ball2 1.25s infinite;
+  40% {
+    transform: scale(1);
   }
-  .loader #ball-3 {
-    background: white;
-    animation: ball3 1.25s infinite;
-    -webkit-animation: ball3 1.25s infinite;
+  60% {
+    transform: scale(1);
   }
-  @keyframes ball1 {
-    0% {
-      transform: scale(1);
-    }
-    20% {
-      transform: scale(1.5);
-      background: #9356dc;
-      opacity: 0.8;
-    }
-    40% {
-      transform: scale(1);
-    }
-    60% {
-      transform: scale(1);
-    }
-    80% {
-      transform: scale(1);
-    }
-    100% {
-      transform: scale(1);
-    }
+  80% {
+    transform: scale(1);
   }
-  @-webkit-keyframes ball1 {
-    0% {
-      transform: scale(1);
-    }
-    20% {
-      transform: scale(1.5);
-      background: #9356dc;
-      opacity: 0.8;
-    }
-    40% {
-      transform: scale(1);
-    }
-    60% {
-      transform: scale(1);
-    }
-    80% {
-      transform: scale(1);
-    }
-    100% {
-      transform: scale(1);
-    }
+  100% {
+    transform: scale(1);
   }
-  @keyframes ball2 {
-    0% {
-      transform: scale(1);
-    }
-    20% {
-      transform: scale(1);
-    }
-    40% {
-      transform: scale(1.5) translate(0%, -25%);
-      background: #99e2d0;
-      opacity: 0.8;
-    }
-    60% {
-      transform: scale(1);
-    }
-    80% {
-      transform: scale(1);
-    }
-    100% {
-      transform: scale(1);
-    }
+}
+@-webkit-keyframes ball1 {
+  0% {
+    transform: scale(1);
   }
-  @-webkit-keyframes ball2 {
-    0% {
-      transform: scale(1);
-    }
-    20% {
-      transform: scale(1);
-    }
-    40% {
-      transform: scale(1.5) translate(0%, -25%);
-      background: #99e2d0;
-      opacity: 0.8;
-    }
-    60% {
-      transform: scale(1);
-    }
-    80% {
-      transform: scale(1);
-    }
-    100% {
-      transform: scale(1);
-    }
+  20% {
+    transform: scale(1.5);
+    background: #9356dc;
+    opacity: 0.8;
   }
-  @keyframes ball3 {
-    0% {
-      transform: scale(1);
-    }
-    20% {
-      transform: scale(1);
-    }
-    40% {
-      transform: scale(1);
-    }
-    60% {
-      transform: scale(1.5);
-      background: #ff79da;
-      opacity: 0.8;
-    }
-    80% {
-      transform: scale(1);
-    }
-    100% {
-      transform: scale(1);
-    }
+  40% {
+    transform: scale(1);
   }
-  @-webkit-keyframes ball3 {
-    0% {
-      transform: scale(1);
-    }
-    20% {
-      transform: scale(1);
-    }
-    40% {
-      transform: scale(1);
-    }
-    60% {
-      transform: scale(1.5);
-      background: #ff79da;
-      opacity: 0.8;
-    }
-    80% {
-      transform: scale(1);
-    }
-    100% {
-      transform: scale(1);
-    }
+  60% {
+    transform: scale(1);
+  }
+  80% {
+    transform: scale(1);
+  }
+  100% {
+    transform: scale(1);
+  }
+}
+@keyframes ball2 {
+  0% {
+    transform: scale(1);
+  }
+  20% {
+    transform: scale(1);
+  }
+  40% {
+    transform: scale(1.5) translate(0%, -25%);
+    background: #99e2d0;
+    opacity: 0.8;
+  }
+  60% {
+    transform: scale(1);
+  }
+  80% {
+    transform: scale(1);
+  }
+  100% {
+    transform: scale(1);
+  }
+}
+@-webkit-keyframes ball2 {
+  0% {
+    transform: scale(1);
+  }
+  20% {
+    transform: scale(1);
+  }
+  40% {
+    transform: scale(1.5) translate(0%, -25%);
+    background: #99e2d0;
+    opacity: 0.8;
+  }
+  60% {
+    transform: scale(1);
+  }
+  80% {
+    transform: scale(1);
+  }
+  100% {
+    transform: scale(1);
+  }
+}
+@keyframes ball3 {
+  0% {
+    transform: scale(1);
+  }
+  20% {
+    transform: scale(1);
+  }
+  40% {
+    transform: scale(1);
+  }
+  60% {
+    transform: scale(1.5);
+    background: #ff79da;
+    opacity: 0.8;
+  }
+  80% {
+    transform: scale(1);
+  }
+  100% {
+    transform: scale(1);
+  }
+}
+@-webkit-keyframes ball3 {
+  0% {
+    transform: scale(1);
+  }
+  20% {
+    transform: scale(1);
+  }
+  40% {
+    transform: scale(1);
+  }
+  60% {
+    transform: scale(1.5);
+    background: #ff79da;
+    opacity: 0.8;
+  }
+  80% {
+    transform: scale(1);
+  }
+  100% {
+    transform: scale(1);
   }
 }
 
