--- a/css/main.css
+++ b/css/main.css
@@ -266,6 +266,86 @@ footer a {
   margin: 1% 0 1% 4%;
 }
 
+form {
+  display: flex;
+  margin: 3%;
+  justify-content: center;
+}
+@media screen and (min-width: 768px) {
+  form {
+    margin: 2%;
+  }
+}
+
+.city {
+  background-color: #eaeaea;
+  border-color: transparent;
+  width: 150px;
+}
+@media screen and (min-width: 768px) {
+  .city {
+    width: 200px;
+    height: 30px;
+  }
+}
+@media screen and (min-width: 1100px) {
+  .city {
+    width: 220px;
+  }
+}
+
+input::-moz-placeholder {
+  color: black;
+  font-weight: bold;
+  font-size: 18px;
+}
+
+input:-ms-input-placeholder {
+  color: black;
+  font-weight: bold;
+  font-size: 18px;
+}
+
+input::placeholder {
+  color: black;
+  font-weight: bold;
+  font-size: 18px;
+}
+@media screen and (min-width: 768px) {
+  input::-moz-placeholder {
+    font-size: 22px;
+  }
+  input:-ms-input-placeholder {
+    font-size: 22px;
+  }
+  input::placeholder {
+    font-size: 22px;
+  }
+}
+@media screen and (min-width: 768px) {
+  input::-moz-placeholder {
+    font-size: 24px;
+  }
+  input:-ms-input-placeholder {
+    font-size: 24px;
+  }
+  input::placeholder {
+    font-size: 24px;
+  }
+}
+
+nav {
+  display: flex;
+  align-items: center;
+  width: 100%;
+  background-color: #eaeaea;
+  justify-content: center;
+  box-shadow: inset 0px 11px 10px -10px #bababa;
+}
+nav p, nav i {
+  padding: 0 2%;
+}
+
 * {
   box-sizing: border-box;
 }
@@ -277,16 +357,7 @@ body {
 }
 
 h1 {
-  font-size: 34px;
-  font-family: "Shrikhand", "Geneva", "Tahoma", "sans-serif";
-  margin: 3% auto 1% auto;
-}
-@media only screen and (min-width: 768px) {
-  h1 {
-    font-size: 42px;
-    font-family: "Shrikhand", Geneva, Tahoma, sans-serif;
-    margin-top: 1%;
-  }
+  font-size: 24px;
 }
 
 h2 {
@@ -332,18 +403,6 @@ header img {
     width: 30%;
     padding: 2%;
   }
-}
-
-nav {
-  display: flex;
-  align-items: center;
-  width: 100%;
-  background-color: #eaeaea;
-  justify-content: center;
-  box-shadow: inset 0px 11px 10px -10px #bababa;
-}
-nav p, nav i {
-  padding: 0 2%;
 }
 
 article {
